<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/c_ffffff">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:padding="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutFavorite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/c_eeeeee"
                android:paddingVertical="24dp"
                android:paddingHorizontal="20dp"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    style="@style/f_000000_20B"
                    android:id="@+id/tvEmpty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/favorite_menu_empty"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    android:visibility="gone"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutItem1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/layoutFavorite">

                <TextView
                    style="@style/f_000000_12R"
                    android:id="@+id/tvRecharge"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/favorite_menu_recharge"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/ivRecharge"/>

                <ImageView
                    android:id="@+id/ivRecharge"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/ic_launcher_selector"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutItem2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@id/layoutItem1">

                <TextView
                    style="@style/f_000000_12R"
                    android:id="@+id/tvBankAccount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/favorite_menu_bank_account"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/ivBankAccount"/>

                <ImageView
                    android:id="@+id/ivBankAccount"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/ic_launcher_selector"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutItem3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@id/layoutItem2">

                <TextView
                    style="@style/f_000000_12R"
                    android:id="@+id/tvDeduction"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/favorite_menu_deduction"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/ivDeduction"/>

                <ImageView
                    android:id="@+id/ivDeduction"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/ic_launcher_selector"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutItem4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@id/layoutItem3">

                <TextView
                    style="@style/f_000000_12R"
                    android:id="@+id/tvPolicy"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/favorite_menu_policy"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/ivPolicy"/>

                <ImageView
                    android:id="@+id/ivPolicy"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/ic_launcher_selector"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>